--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,11 @@ PASSWORD = "<PASSWORD>"
 DATABASE = "<DB_NAME>"
 
 PORT = PORT_NO
+
+S3_ACCESS_KEY_ID = "<YOUR_S3_ACCESS_KEY_ID>"
+
+S3_SECRET_ACCESS_KEY = "<YOUR_S3_SECRET_ACCESS_KEY>"
+
+CLOUDFRONT_PRIVATE_KEY = "<YOUR_CLOUDFRONT_PRIVATE_KEY>"
+
+CLOUDFRONT_KEY_PAIR_ID = "<YOUR_CLOUDFRONT_KEY_PAIR_ID>"
