--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "mysql2": "^3.6.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "youtube-thumbnail": "^1.3.0",
+    "youtube-title": "^1.0.1"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
