--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "aws",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "type": "module",
-  "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
-    "debug": "nodemon --inspect app.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@aws-sdk/client-s3": "^3.458.0",
-    "@aws-sdk/cloudfront-signer": "^3.465.0",
-    "@aws-sdk/s3-request-presigner": "^3.458.0",
-    "dotenv": "^16.3.1",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1",
-    "mysql2": "^3.6.3",
-    "path": "^0.12.7",
-    "youtube-thumbnail": "^1.3.0",
-    "youtube-title": "^1.0.1"
-  },
-  "devDependencies": {
-    "morgan": "^1.10.0",
-    "nodemon": "^3.0.1"
-  }
+    "name": "aws",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.js",
+    "type": "module",
+    "scripts": {
+        "start": "node index.js",
+        "dev": "nodemon index.js",
+        "debug": "nodemon --inspect index.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@aws-sdk/client-s3": "^3.458.0",
+        "@aws-sdk/cloudfront-signer": "^3.465.0",
+        "@aws-sdk/s3-request-presigner": "^3.458.0",
+        "dotenv": "^16.3.1",
+        "ejs": "^3.1.9",
+        "express": "^4.18.2",
+        "multer": "^1.4.5-lts.1",
+        "multer-s3": "^3.0.1",
+        "mysql2": "^3.6.3",
+        "path": "^0.12.7",
+        "youtube-thumbnail": "^1.3.0",
+        "youtube-title": "^1.0.1"
+    },
+    "devDependencies": {
+        "morgan": "^1.10.0",
+        "nodemon": "^3.0.1"
+    }
 }
