--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@aws-sdk/client-s3": "^3.458.0",
-        "@aws-sdk/cloudfront-signer": "^3.465.0",
-        "@aws-sdk/s3-request-presigner": "^3.458.0",
+        "@supabase/supabase-js": "^2.43.0",
         "dotenv": "^16.3.1",
         "ejs": "^3.1.9",
         "express": "^4.18.2",
